# Zuma

./: .gitignore  Cargo.toml  build.rs  readme.md
doc/: zuma_language_specification.tex
examples/: example01.zm  front_page01.zm  gradient01.zm  process_map.zm  scopes.zm  user_procedure.zm
src/: ast.rs  generator.rs  grammar.lalrpop  lib.rs  main.rs  stack.rs  tests.rs  translator.rs
src/code_generation/: mod.rs  readme.md  style_attributes.rs  tests.rs
src/evaluation/: helpers.rs  mod.rs  stdlib.rs
src/interpretation/: graphics.rs  helpers.rs  mod.rs  stdlib.rs
src/parsing/: ast.rs  grammar.lalrpop  grammar.rs  mod.rs  parsing_functions.rs  tests.rs  zuma_model.rs
src/svg_generator/: mod.rs  readme.md  svg_model.rs  tests.rs  xml_helpers.rs
src/tests/: mod.rs  parsing_primitives_tests.rs
vscode_extension/: CHANGELOG.md  README.md  package.json
zuma/: Cargo.nix  Cargo.toml  build.rs  default.nix  readme.md  result
zuma-playground/: Cargo.toml  README.md  index.html  zuma_cheatsheet.md
zuma-playground/deploy/: index.html
zuma-playground/resources/: stylesheet.css
zuma-playground/src/: lib.rs
zuma-vector-graphics-language/: README.md  vsc-extension-quickstart.md
zuma/doc/: zuma_language_specification.tex
zuma/examples/: cisco_switch.zm  example01.zm  gradient02.zm  heart.zm  process_map.zm  scopes.zm
zuma/src/: lib.rs  main.rs  tests.rs
zuma/src/code_generation/: mod.rs
zuma/src/error_handling/: mod.rs
zuma/src/interpretation/: graphics.rs  mod.rs  stdlib.rs
zuma/src/parsing/: ast.rs  grammar.lalrpop  mod.rs  tests.rs
(+1 files in other folders)
