[package]
name = "zuma"
version = "0.1.0"
authors = ["Vladimír Ctibor <vladimir.ctibor@gmail.com>"]
edition = "2018"
description = "Vector Graphics Language"
license = "GPL-3.0-only"

[lib]
name = "zumalib"
path = "src/lib.rs"

[[bin]]
name = "zuma"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
lalrpop-util = "0.19.4"
regex = "1.0"
anyhow = "1.0"
maplit = "1.0"