[package]
name = "zuma"
version = "0.1.1"
authors = ["Vladimír Ctibor <vladimir.ctibor@gmail.com>"]
edition = "2018"
description = "Vector Graphics Language"
license = "GPL-3.0-only"

[lib]
name = "zumalib"
path = "src/lib.rs"

[[bin]]
name = "zuma"
path = "src/main.rs"

[profile.release]
debug = true

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
# general deps
anyhow = "1.0"
maplit = "1.0"
paw = "1.0"
structopt = { version = "0.3", features = ["paw"] }

# parsing
lalrpop-util = "0.19.4"
regex = "1.0"

# rendering PNG
#resvg = "0.13"
#usvg = "0.13"
#tiny-skia = "0.4"